// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProjectInfo PackageGraph parity > preserves basic-react 1`] = `
{
  "capabilities": [
    "react",
    "react:17",
    "react:18",
    "react:19",
    "tanstack-query",
    "typescript",
    "unknown",
  ],
  "projectInfo": {
    "expoVersion": null,
    "framework": "unknown",
    "hasI18nLibrary": false,
    "hasMobxReact": false,
    "hasMobxReactLite": false,
    "hasMobxReactObserver": false,
    "hasMobxStateTree": false,
    "hasReactCompiler": false,
    "hasReactCompilerLintPlugin": false,
    "hasReactNativeWorkspace": false,
    "hasReactRouterFramework": false,
    "hasReactThreeFiber": false,
    "hasReanimated": false,
    "hasRemotion": false,
    "hasSsrDependency": false,
    "hasTanStackQuery": true,
    "hasThree": false,
    "hasTypeScript": true,
    "isPreES2023Target": false,
    "isStaticExport": false,
    "mobxMajorVersion": null,
    "mobxReactLiteVersion": null,
    "mobxReactVersion": null,
    "mobxVersion": null,
    "nextjsMajorVersion": null,
    "nextjsVersion": null,
    "preactMajorVersion": null,
    "preactVersion": null,
    "projectName": "test-basic-react",
    "reactMajorVersion": 19,
    "reactRouterVersion": null,
    "reactThreeFiberMajorVersion": null,
    "reactThreeFiberVersion": null,
    "reactVersion": "^19.0.0",
    "reanimatedVersion": null,
    "remotionMajorVersion": null,
    "remotionVersion": null,
    "rootDirectory": "<fixture:basic-react>",
    "shopifyFlashListMajorVersion": null,
    "shopifyFlashListVersion": null,
    "sourceFileCount": 25,
    "styledComponentsVersion": null,
    "tailwindVersion": null,
    "tanstackQueryVersion": "^5.0.0",
    "threeRelease": null,
    "threeVersion": null,
    "valtioMajorVersion": null,
    "valtioVersion": null,
    "zodMajorVersion": null,
    "zodVersion": null,
    "zustandMajorVersion": null,
    "zustandVersion": null,
  },
}
`;

exports[`ProjectInfo PackageGraph parity > preserves bun-multiple-grouped-catalogs 1`] = `
{
  "capabilities": [
    "react",
    "react:17",
    "react:18",
    "react:19",
    "react:19.2",
    "unknown",
  ],
  "projectInfo": {
    "expoVersion": null,
    "framework": "unknown",
    "hasI18nLibrary": false,
    "hasMobxReact": false,
    "hasMobxReactLite": false,
    "hasMobxReactObserver": false,
    "hasMobxStateTree": false,
    "hasReactCompiler": false,
    "hasReactCompilerLintPlugin": false,
    "hasReactNativeWorkspace": false,
    "hasReactRouterFramework": false,
    "hasReactThreeFiber": false,
    "hasReanimated": false,
    "hasRemotion": false,
    "hasSsrDependency": false,
    "hasTanStackQuery": false,
    "hasThree": false,
    "hasTypeScript": false,
    "isPreES2023Target": false,
    "isStaticExport": false,
    "mobxMajorVersion": null,
    "mobxReactLiteVersion": null,
    "mobxReactVersion": null,
    "mobxVersion": null,
    "nextjsMajorVersion": null,
    "nextjsVersion": null,
    "preactMajorVersion": null,
    "preactVersion": null,
    "projectName": "bun-multiple-grouped-catalogs",
    "reactMajorVersion": 19,
    "reactRouterVersion": null,
    "reactThreeFiberMajorVersion": null,
    "reactThreeFiberVersion": null,
    "reactVersion": "19.2.0",
    "reanimatedVersion": null,
    "remotionMajorVersion": null,
    "remotionVersion": null,
    "rootDirectory": "<fixture:bun-multiple-grouped-catalogs>",
    "shopifyFlashListMajorVersion": null,
    "shopifyFlashListVersion": null,
    "sourceFileCount": 0,
    "styledComponentsVersion": null,
    "tailwindVersion": null,
    "tanstackQueryVersion": null,
    "threeRelease": null,
    "threeVersion": null,
    "valtioMajorVersion": null,
    "valtioVersion": null,
    "zodMajorVersion": null,
    "zodVersion": null,
    "zustandMajorVersion": null,
    "zustandVersion": null,
  },
}
`;

exports[`ProjectInfo PackageGraph parity > preserves component-library 1`] = `
{
  "capabilities": [
    "react",
    "react:17",
    "react:18",
    "unknown",
  ],
  "projectInfo": {
    "expoVersion": null,
    "framework": "unknown",
    "hasI18nLibrary": false,
    "hasMobxReact": false,
    "hasMobxReactLite": false,
    "hasMobxReactObserver": false,
    "hasMobxStateTree": false,
    "hasReactCompiler": false,
    "hasReactCompilerLintPlugin": false,
    "hasReactNativeWorkspace": false,
    "hasReactRouterFramework": false,
    "hasReactThreeFiber": false,
    "hasReanimated": false,
    "hasRemotion": false,
    "hasSsrDependency": false,
    "hasTanStackQuery": false,
    "hasThree": false,
    "hasTypeScript": false,
    "isPreES2023Target": false,
    "isStaticExport": false,
    "mobxMajorVersion": null,
    "mobxReactLiteVersion": null,
    "mobxReactVersion": null,
    "mobxVersion": null,
    "nextjsMajorVersion": null,
    "nextjsVersion": null,
    "preactMajorVersion": null,
    "preactVersion": null,
    "projectName": "test-component-library",
    "reactMajorVersion": 18,
    "reactRouterVersion": null,
    "reactThreeFiberMajorVersion": null,
    "reactThreeFiberVersion": null,
    "reactVersion": "^18.0.0 || ^19.0.0",
    "reanimatedVersion": null,
    "remotionMajorVersion": null,
    "remotionVersion": null,
    "rootDirectory": "<fixture:component-library>",
    "shopifyFlashListMajorVersion": null,
    "shopifyFlashListVersion": null,
    "sourceFileCount": 0,
    "styledComponentsVersion": null,
    "tailwindVersion": null,
    "tanstackQueryVersion": null,
    "threeRelease": null,
    "threeVersion": null,
    "valtioMajorVersion": null,
    "valtioVersion": null,
    "zodMajorVersion": null,
    "zodVersion": null,
    "zustandMajorVersion": null,
    "zustandVersion": null,
  },
}
`;

exports[`ProjectInfo PackageGraph parity > preserves mixed-rn-web-monorepo 1`] = `
{
  "capabilities": [
    "client-only",
    "expo",
    "pre-es2023",
    "react",
    "react-native",
    "react:17",
    "react:18",
    "react:19",
    "typescript",
    "vite",
  ],
  "projectInfo": {
    "expoVersion": "^51.0.0",
    "framework": "vite",
    "hasI18nLibrary": false,
    "hasMobxReact": false,
    "hasMobxReactLite": false,
    "hasMobxReactObserver": false,
    "hasMobxStateTree": false,
    "hasReactCompiler": false,
    "hasReactCompilerLintPlugin": false,
    "hasReactNativeWorkspace": true,
    "hasReactRouterFramework": false,
    "hasReactThreeFiber": false,
    "hasReanimated": false,
    "hasRemotion": false,
    "hasSsrDependency": false,
    "hasTanStackQuery": false,
    "hasThree": false,
    "hasTypeScript": true,
    "isPreES2023Target": true,
    "isStaticExport": false,
    "mobxMajorVersion": null,
    "mobxReactLiteVersion": null,
    "mobxReactVersion": null,
    "mobxVersion": null,
    "nextjsMajorVersion": null,
    "nextjsVersion": null,
    "preactMajorVersion": null,
    "preactVersion": null,
    "projectName": "mixed-rn-web-monorepo",
    "reactMajorVersion": 19,
    "reactRouterVersion": null,
    "reactThreeFiberMajorVersion": null,
    "reactThreeFiberVersion": null,
    "reactVersion": "^19.0.0",
    "reanimatedVersion": null,
    "remotionMajorVersion": null,
    "remotionVersion": null,
    "rootDirectory": "<fixture:mixed-rn-web-monorepo>",
    "shopifyFlashListMajorVersion": null,
    "shopifyFlashListVersion": null,
    "sourceFileCount": 8,
    "styledComponentsVersion": null,
    "tailwindVersion": null,
    "tanstackQueryVersion": null,
    "threeRelease": null,
    "threeVersion": null,
    "valtioMajorVersion": null,
    "valtioVersion": null,
    "zodMajorVersion": null,
    "zodVersion": null,
    "zustandMajorVersion": null,
    "zustandVersion": null,
  },
}
`;

exports[`ProjectInfo PackageGraph parity > preserves nextjs-app 1`] = `
{
  "capabilities": [
    "nextjs",
    "nextjs:15",
    "react",
    "react:17",
    "react:18",
    "react:19",
    "server-actions",
    "ssr",
    "typescript",
  ],
  "projectInfo": {
    "expoVersion": null,
    "framework": "nextjs",
    "hasI18nLibrary": false,
    "hasMobxReact": false,
    "hasMobxReactLite": false,
    "hasMobxReactObserver": false,
    "hasMobxStateTree": false,
    "hasReactCompiler": false,
    "hasReactCompilerLintPlugin": false,
    "hasReactNativeWorkspace": false,
    "hasReactRouterFramework": false,
    "hasReactThreeFiber": false,
    "hasReanimated": false,
    "hasRemotion": false,
    "hasSsrDependency": false,
    "hasTanStackQuery": false,
    "hasThree": false,
    "hasTypeScript": true,
    "isPreES2023Target": false,
    "isStaticExport": false,
    "mobxMajorVersion": null,
    "mobxReactLiteVersion": null,
    "mobxReactVersion": null,
    "mobxVersion": null,
    "nextjsMajorVersion": 15,
    "nextjsVersion": "^15.0.0",
    "preactMajorVersion": null,
    "preactVersion": null,
    "projectName": "test-nextjs-app",
    "reactMajorVersion": 19,
    "reactRouterVersion": null,
    "reactThreeFiberMajorVersion": null,
    "reactThreeFiberVersion": null,
    "reactVersion": "^19.0.0",
    "reanimatedVersion": null,
    "remotionMajorVersion": null,
    "remotionVersion": null,
    "rootDirectory": "<fixture:nextjs-app>",
    "shopifyFlashListMajorVersion": null,
    "shopifyFlashListVersion": null,
    "sourceFileCount": 15,
    "styledComponentsVersion": null,
    "tailwindVersion": null,
    "tanstackQueryVersion": null,
    "threeRelease": null,
    "threeVersion": null,
    "valtioMajorVersion": null,
    "valtioVersion": null,
    "zodMajorVersion": null,
    "zodVersion": null,
    "zustandMajorVersion": null,
    "zustandVersion": null,
  },
}
`;

exports[`ProjectInfo PackageGraph parity > preserves non-react 1`] = `
{
  "capabilities": [
    "unknown",
    "zod",
    "zod:4",
  ],
  "projectInfo": {
    "expoVersion": null,
    "framework": "unknown",
    "hasI18nLibrary": false,
    "hasMobxReact": false,
    "hasMobxReactLite": false,
    "hasMobxReactObserver": false,
    "hasMobxStateTree": false,
    "hasReactCompiler": false,
    "hasReactCompilerLintPlugin": false,
    "hasReactNativeWorkspace": false,
    "hasReactRouterFramework": false,
    "hasReactThreeFiber": false,
    "hasReanimated": false,
    "hasRemotion": false,
    "hasSsrDependency": false,
    "hasTanStackQuery": false,
    "hasThree": false,
    "hasTypeScript": false,
    "isPreES2023Target": false,
    "isStaticExport": false,
    "mobxMajorVersion": null,
    "mobxReactLiteVersion": null,
    "mobxReactVersion": null,
    "mobxVersion": null,
    "nextjsMajorVersion": null,
    "nextjsVersion": null,
    "preactMajorVersion": null,
    "preactVersion": null,
    "projectName": "non-react",
    "reactMajorVersion": null,
    "reactRouterVersion": null,
    "reactThreeFiberMajorVersion": null,
    "reactThreeFiberVersion": null,
    "reactVersion": null,
    "reanimatedVersion": null,
    "remotionMajorVersion": null,
    "remotionVersion": null,
    "rootDirectory": "<fixture:non-react>",
    "shopifyFlashListMajorVersion": null,
    "shopifyFlashListVersion": null,
    "sourceFileCount": 0,
    "styledComponentsVersion": null,
    "tailwindVersion": null,
    "tanstackQueryVersion": null,
    "threeRelease": null,
    "threeVersion": null,
    "valtioMajorVersion": null,
    "valtioVersion": null,
    "zodMajorVersion": 4,
    "zodVersion": "^4.0.0",
    "zustandMajorVersion": null,
    "zustandVersion": null,
  },
}
`;

exports[`ProjectInfo PackageGraph parity > preserves package-local-capabilities 1`] = `
{
  "capabilities": [
    "client-only",
    "expo",
    "expo:54",
    "react",
    "react-native",
    "react:17",
    "react:18",
    "tanstack-query",
    "vite",
  ],
  "projectInfo": {
    "expoVersion": "^54.0.0",
    "framework": "vite",
    "hasI18nLibrary": false,
    "hasMobxReact": false,
    "hasMobxReactLite": false,
    "hasMobxReactObserver": false,
    "hasMobxStateTree": false,
    "hasReactCompiler": false,
    "hasReactCompilerLintPlugin": false,
    "hasReactNativeWorkspace": true,
    "hasReactRouterFramework": false,
    "hasReactThreeFiber": false,
    "hasReanimated": false,
    "hasRemotion": false,
    "hasSsrDependency": false,
    "hasTanStackQuery": true,
    "hasThree": false,
    "hasTypeScript": false,
    "isPreES2023Target": false,
    "isStaticExport": false,
    "mobxMajorVersion": null,
    "mobxReactLiteVersion": null,
    "mobxReactVersion": null,
    "mobxVersion": null,
    "nextjsMajorVersion": null,
    "nextjsVersion": null,
    "preactMajorVersion": null,
    "preactVersion": null,
    "projectName": "package-local-capabilities",
    "reactMajorVersion": 18,
    "reactRouterVersion": null,
    "reactThreeFiberMajorVersion": null,
    "reactThreeFiberVersion": null,
    "reactVersion": "^18.2.0",
    "reanimatedVersion": null,
    "remotionMajorVersion": null,
    "remotionVersion": null,
    "rootDirectory": "<fixture:package-local-capabilities>",
    "shopifyFlashListMajorVersion": null,
    "shopifyFlashListVersion": null,
    "sourceFileCount": 3,
    "styledComponentsVersion": null,
    "tailwindVersion": null,
    "tanstackQueryVersion": "^5.66.0",
    "threeRelease": null,
    "threeVersion": null,
    "valtioMajorVersion": null,
    "valtioVersion": null,
    "zodMajorVersion": null,
    "zodVersion": null,
    "zustandMajorVersion": null,
    "zustandVersion": null,
  },
}
`;

exports[`ProjectInfo PackageGraph parity > preserves pnpm-catalog-workspace 1`] = `
{
  "capabilities": [
    "react",
    "react:17",
    "react:18",
    "react:19",
    "unknown",
  ],
  "projectInfo": {
    "expoVersion": null,
    "framework": "unknown",
    "hasI18nLibrary": false,
    "hasMobxReact": false,
    "hasMobxReactLite": false,
    "hasMobxReactObserver": false,
    "hasMobxStateTree": false,
    "hasReactCompiler": false,
    "hasReactCompilerLintPlugin": false,
    "hasReactNativeWorkspace": false,
    "hasReactRouterFramework": false,
    "hasReactThreeFiber": false,
    "hasReanimated": false,
    "hasRemotion": false,
    "hasSsrDependency": false,
    "hasTanStackQuery": false,
    "hasThree": false,
    "hasTypeScript": false,
    "isPreES2023Target": false,
    "isStaticExport": false,
    "mobxMajorVersion": null,
    "mobxReactLiteVersion": null,
    "mobxReactVersion": null,
    "mobxVersion": null,
    "nextjsMajorVersion": null,
    "nextjsVersion": null,
    "preactMajorVersion": null,
    "preactVersion": null,
    "projectName": "pnpm-catalog-workspace",
    "reactMajorVersion": 19,
    "reactRouterVersion": null,
    "reactThreeFiberMajorVersion": null,
    "reactThreeFiberVersion": null,
    "reactVersion": "^19.0.0",
    "reanimatedVersion": null,
    "remotionMajorVersion": null,
    "remotionVersion": null,
    "rootDirectory": "<fixture:pnpm-catalog-workspace>",
    "shopifyFlashListMajorVersion": null,
    "shopifyFlashListVersion": null,
    "sourceFileCount": 0,
    "styledComponentsVersion": null,
    "tailwindVersion": null,
    "tanstackQueryVersion": null,
    "threeRelease": null,
    "threeVersion": null,
    "valtioMajorVersion": null,
    "valtioVersion": null,
    "zodMajorVersion": null,
    "zodVersion": null,
    "zustandMajorVersion": null,
    "zustandVersion": null,
  },
}
`;

exports[`ProjectInfo PackageGraph parity > preserves pnpm-named-catalog 1`] = `
{
  "capabilities": [
    "react",
    "react:17",
    "react:18",
    "react:19",
    "unknown",
  ],
  "projectInfo": {
    "expoVersion": null,
    "framework": "unknown",
    "hasI18nLibrary": false,
    "hasMobxReact": false,
    "hasMobxReactLite": false,
    "hasMobxReactObserver": false,
    "hasMobxStateTree": false,
    "hasReactCompiler": false,
    "hasReactCompilerLintPlugin": false,
    "hasReactNativeWorkspace": false,
    "hasReactRouterFramework": false,
    "hasReactThreeFiber": false,
    "hasReanimated": false,
    "hasRemotion": false,
    "hasSsrDependency": false,
    "hasTanStackQuery": false,
    "hasThree": false,
    "hasTypeScript": false,
    "isPreES2023Target": false,
    "isStaticExport": false,
    "mobxMajorVersion": null,
    "mobxReactLiteVersion": null,
    "mobxReactVersion": null,
    "mobxVersion": null,
    "nextjsMajorVersion": null,
    "nextjsVersion": null,
    "preactMajorVersion": null,
    "preactVersion": null,
    "projectName": "pnpm-named-catalog",
    "reactMajorVersion": 19,
    "reactRouterVersion": null,
    "reactThreeFiberMajorVersion": null,
    "reactThreeFiberVersion": null,
    "reactVersion": "^19.0.0",
    "reanimatedVersion": null,
    "remotionMajorVersion": null,
    "remotionVersion": null,
    "rootDirectory": "<fixture:pnpm-named-catalog>",
    "shopifyFlashListMajorVersion": null,
    "shopifyFlashListVersion": null,
    "sourceFileCount": 0,
    "styledComponentsVersion": null,
    "tailwindVersion": null,
    "tanstackQueryVersion": null,
    "threeRelease": null,
    "threeVersion": null,
    "valtioMajorVersion": null,
    "valtioVersion": null,
    "zodMajorVersion": null,
    "zodVersion": null,
    "zustandMajorVersion": null,
    "zustandVersion": null,
  },
}
`;

exports[`ProjectInfo PackageGraph parity > preserves react-17 1`] = `
{
  "capabilities": [
    "react",
    "react:17",
    "unknown",
  ],
  "projectInfo": {
    "expoVersion": null,
    "framework": "unknown",
    "hasI18nLibrary": false,
    "hasMobxReact": false,
    "hasMobxReactLite": false,
    "hasMobxReactObserver": false,
    "hasMobxStateTree": false,
    "hasReactCompiler": false,
    "hasReactCompilerLintPlugin": false,
    "hasReactNativeWorkspace": false,
    "hasReactRouterFramework": false,
    "hasReactThreeFiber": false,
    "hasReanimated": false,
    "hasRemotion": false,
    "hasSsrDependency": false,
    "hasTanStackQuery": false,
    "hasThree": false,
    "hasTypeScript": false,
    "isPreES2023Target": false,
    "isStaticExport": false,
    "mobxMajorVersion": null,
    "mobxReactLiteVersion": null,
    "mobxReactVersion": null,
    "mobxVersion": null,
    "nextjsMajorVersion": null,
    "nextjsVersion": null,
    "preactMajorVersion": null,
    "preactVersion": null,
    "projectName": "react-17",
    "reactMajorVersion": 17,
    "reactRouterVersion": null,
    "reactThreeFiberMajorVersion": null,
    "reactThreeFiberVersion": null,
    "reactVersion": "^17.0.2",
    "reanimatedVersion": null,
    "remotionMajorVersion": null,
    "remotionVersion": null,
    "rootDirectory": "<fixture:react-17>",
    "shopifyFlashListMajorVersion": null,
    "shopifyFlashListVersion": null,
    "sourceFileCount": 0,
    "styledComponentsVersion": null,
    "tailwindVersion": null,
    "tanstackQueryVersion": null,
    "threeRelease": null,
    "threeVersion": null,
    "valtioMajorVersion": null,
    "valtioVersion": null,
    "zodMajorVersion": null,
    "zodVersion": null,
    "zustandMajorVersion": null,
    "zustandVersion": null,
  },
}
`;

exports[`ProjectInfo PackageGraph parity > preserves tanstack-start-app 1`] = `
{
  "capabilities": [
    "pre-es2023",
    "react",
    "react:17",
    "react:18",
    "react:19",
    "server-actions",
    "ssr",
    "tanstack-start",
    "typescript",
  ],
  "projectInfo": {
    "expoVersion": null,
    "framework": "tanstack-start",
    "hasI18nLibrary": false,
    "hasMobxReact": false,
    "hasMobxReactLite": false,
    "hasMobxReactObserver": false,
    "hasMobxStateTree": false,
    "hasReactCompiler": false,
    "hasReactCompilerLintPlugin": false,
    "hasReactNativeWorkspace": false,
    "hasReactRouterFramework": false,
    "hasReactThreeFiber": false,
    "hasReanimated": false,
    "hasRemotion": false,
    "hasSsrDependency": false,
    "hasTanStackQuery": false,
    "hasThree": false,
    "hasTypeScript": true,
    "isPreES2023Target": true,
    "isStaticExport": false,
    "mobxMajorVersion": null,
    "mobxReactLiteVersion": null,
    "mobxReactVersion": null,
    "mobxVersion": null,
    "nextjsMajorVersion": null,
    "nextjsVersion": null,
    "preactMajorVersion": null,
    "preactVersion": null,
    "projectName": "test-tanstack-start-app",
    "reactMajorVersion": 19,
    "reactRouterVersion": null,
    "reactThreeFiberMajorVersion": null,
    "reactThreeFiberVersion": null,
    "reactVersion": "^19.0.0",
    "reanimatedVersion": null,
    "remotionMajorVersion": null,
    "remotionVersion": null,
    "rootDirectory": "<fixture:tanstack-start-app>",
    "shopifyFlashListMajorVersion": null,
    "shopifyFlashListVersion": null,
    "sourceFileCount": 4,
    "styledComponentsVersion": null,
    "tailwindVersion": null,
    "tanstackQueryVersion": null,
    "threeRelease": null,
    "threeVersion": null,
    "valtioMajorVersion": null,
    "valtioVersion": null,
    "zodMajorVersion": null,
    "zodVersion": null,
    "zustandMajorVersion": null,
    "zustandVersion": null,
  },
}
`;
